--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <script>
         // JavaScript to fetch and display blog posts
-        fetch('./data/posts.json')
+        fetch('./posts.json')
             .then(response => {
                 if (!response.ok) {
                     throw new Error("Failed to load posts.json");
