--- a/post.html
+++ b/post.html
@@ -23,7 +23,7 @@
 
         if (slug) {
             // Fetch blog posts from the JSON file
-            fetch('./data/posts.json')
+            fetch('./posts.json')
                 .then(response => response.json())
                 .then(data => {
                     // Find the post with the matching slug
